--- a/relatorio-de-visita-tecnica-com-react/src/components/aside/aside.sass
+++ b/relatorio-de-visita-tecnica-com-react/src/components/aside/aside.sass
@@ -2,7 +2,7 @@
   background-color: white
   min-width: 248px
   max-width: 248px
-  height: auto
+  height: fit-content
   border: 1px solid #DFE0E7
   border-radius: 8px
 
