--- a/relatorio-de-visita-tecnica-com-react/src/components/article/article.sass
+++ b/relatorio-de-visita-tecnica-com-react/src/components/article/article.sass
@@ -2,5 +2,14 @@
   background-color: #E5E5E5
   display: flex
   flex-direction: row
+  flex-wrap: wrap
   width: 100%
   height: auto
+  gap: 16px
+  h2
+    width: 100%
+    font-size: 20px
+    line-height: 20px
+    letter-spacing: -2%
+    color: #363E48
+    margin-bottom: -8px
