--- a/relatorio-de-visita-tecnica-com-react/src/components/plantations/plantations.sass
+++ b/relatorio-de-visita-tecnica-com-react/src/components/plantations/plantations.sass
@@ -1,5 +1,5 @@
-$mobile: 767px
-$tablet: 1114px
+$mobile: 766px
+$tablet: 1112px
 
 @mixin mobile
   @media (max-width: $mobile)
@@ -108,3 +108,5 @@ $tablet: 1114px
       font-weight: 900
       color: #798AA4
       border-left: 1px solid #E7E8EF
+      i
+        cursor: pointer
