--- a/relatorio-de-visita-tecnica-com-react/src/components/header/header.sass
+++ b/relatorio-de-visita-tecnica-com-react/src/components/header/header.sass
@@ -1,3 +1,14 @@
+$mobile: 766px
+$tablet: 1112px
+
+@mixin mobile
+  @media (max-width: $mobile)
+    @content
+
+@mixin tablet
+  @media (max-width: $tablet)
+    @content
+
 .header
   background-color: white
   display: flex
@@ -24,6 +35,10 @@
       letter-spacing: -1%
       color: #363E48
 
+      @include mobile
+        font-size: 16px
+        line-height: 16px
+        margin-right: 32px
 
   .logo
     display: flex
