--- a/relatorio-de-visita-tecnica-com-react/src/components/aside/aside.sass
+++ b/relatorio-de-visita-tecnica-com-react/src/components/aside/aside.sass
@@ -105,6 +105,7 @@ $tablet: 1112px
     flex-direction: row
     justify-content: center
     align-items: center
+    cursor: pointer
     button
       width: 100%
       padding: 10px
